--- a/vale.html
+++ b/vale.html
@@ -10,6 +10,8 @@
     <h1>Will you be my Valentine?</h1>
     <button id="yesButton">Yes</button>
     <button id="noButton">No</button>
+    <img id="valentineImage" src="bruhwhy.jpg" alt="Valentine" width="200" style="display: none;">
+    <img id="newValentineImage" src="yey.jpg" alt="New Valentine" width="300" style="display: none;">
     <script src="script.js"></script>
 </body>
 </html>
